testsuite/poke.pkl/trim-32.pk
/* { dg-do compile } */

[1,2,3,4][1+:-3]; /* { dg-error "" } */
